tests/import/resolution_scope/negative_nested_scope_validation/collision_main.ott
import dep_collision_bad ::=
  | tm
